--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@paypal/react-paypal-js": "^7.8.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -21,7 +23,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
+    "recharts": "^2.1.13",
     "styled-components": "^5.3.5",
+    "timeago.js": "^4.0.2",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
