--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
