--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,6 @@
 {
   "name": "front-end",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -45,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
